--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -19,11 +19,10 @@ body,
   overflow-y: auto;
   width: 100%
 }
-.app-tray.tray-cayamn{
+.app-tray{
     color: rgba(255,255,255,0.7);
     text-align: center;
-    background-color: #159957;
-    background-image: linear-gradient(120deg, #155799, #159957);
+    
 }
 .app-tray.tray-cayamn > .app:not(.active) {
   background-color: rgba(255,255,255,0.08);
@@ -32,4 +31,13 @@ body,
     color: rgba(255,255,255,0.8);
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
+}
+
+.bg-header{
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6a00ff+0,aa00ff+99 */
+background: #6a00ff; /* Old browsers */
+background: -moz-linear-gradient(-45deg, #6a00ff 0%, #aa00ff 99%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, #6a00ff 0%,#aa00ff 99%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, #6a00ff 0%,#aa00ff 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', endColorstr='#aa00ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
