--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -24,16 +24,13 @@ body,
     text-align: center;
     
 }
-.app-tray.tray-cayamn > .app:not(.active) {
-  background-color: rgba(255,255,255,0.08);
-}
-.app-tray.tray-cayamn > .app.active {
-    color: rgba(255,255,255,0.8);
-    background-color: #159957;
-    background-image: linear-gradient(120deg, #155799, #159957);
+
+.app-tray.tray-cayamn > .app {
+    color: white;
 }
 
-.bg-header{
+.bg-purple,
+.app-tray.tray-cayamn > .app.active {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6a00ff+0,aa00ff+99 */
 background: #6a00ff; /* Old browsers */
 background: -moz-linear-gradient(-45deg, #6a00ff 0%, #aa00ff 99%); /* FF3.6-15 */
@@ -41,3 +38,11 @@ background: -webkit-linear-gradient(-45deg, #6a00ff 0%,#aa00ff 99%); /* Chrome10
 background: linear-gradient(135deg, #6a00ff 0%,#aa00ff 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', endColorstr='#aa00ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
+.bg-gold,
+.app-tray.tray-cayamn > .app:not(.active){
+   background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+  radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+}
+
+
+
