--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -9,6 +9,12 @@ body,
     margin: 0;
     padding: 0;
 }
+.header > h2{
+  {
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    text-allign: center;
+} 
 
 .app-tray.app-open > .app.active > .app-content > .row,
 .app-tray.app-open > .app.active > .app-content > form > .row{
@@ -37,10 +43,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 .bg-gold,
 .app-tray > .app:not(.active){
    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-  radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-}
-.color-gold {
-   color: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
   radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
 }
 
