--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -47,6 +47,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 .p-0{
  padding: 0; 
 }
+.h-100{
+  height:100%;
+}
+.bg-white{
+  background-color: white;
+  color: black;
+}
 
 .w3-flat-turquoise
 {color:#fff;background-color:#1abc9c}
