--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -48,7 +48,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
  padding: 0; 
 }
 .h-100{
-  height:100%;
+    height: 100%;
+    height: -moz-fill-available;
+    height: -webkit-fill-available;
+    height: -o-fill-available;
+    height: -ms-fill-available;
 }
 .bg-white{
   background-color: white;
