--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -60,6 +60,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
   background-color: white;
   color: black;
 }
+.bg-white-trans{
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+}
 
 .w3-flat-turquoise
 {color:#fff;background-color:#1abc9c}
