--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -61,8 +61,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
   color: black;
 }
 .bg-white-trans{
-  background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(255,255,255);
+  background-color: rgba(255,255,255,0.5);
   color: black;
 }
 
