--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -62,7 +62,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 }
 .bg-white-trans{
   background-color: rgb(255,255,255);
-  background-color: rgba(255,255,255,0.5);
+  /*background-color: rgba(255,255,255,0.5);*/
   color: black;
 }
 
