--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -13,7 +13,8 @@ body,
   {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    text-allign: center;
+    text-align: center;
+    margin: 0;
 } 
 
 .app-tray.app-open > .app.active > .app-content > .row,
