--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -52,10 +52,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 }
 .h-100{
     height: 100%;
-    height: -moz-fill-available;
-    height: -webkit-fill-available;
-    height: -o-fill-available;
-    height: -ms-fill-available;
+}
+.full-height-53{
+  height: calc(100% - 53px);
 }
 .bg-white{
   background-color: white;
