--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -48,7 +48,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 }
 
 .p-0{
- padding: 0; 
+ padding: 0 !important; 
 }
 .h-100{
     height: 100%;
