--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -5,6 +5,10 @@
   margin-right: auto;
   text-align: center;
 }
+.app-tray .app-tray {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 .app {
   border: 1px solid #ccc !important;
