--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -6,8 +6,8 @@
   text-align: center;
 }
 .app-tray .app-tray {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 .app {
