--- a/css/SampleSite.css
+++ b/css/SampleSite.css
@@ -53,6 +53,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6a00ff', end
 .h-100{
     height: 100%;
 }
+.h-fill {
+  height: 100%;
+  height: -ms-fill-available;
+  height: -webkit-fill-available;
+}
 .full-height-53{
       min-height: calc(100% - 53px);
     height: 100%;
