--- a/css/docs.css
+++ b/css/docs.css
@@ -21,3 +21,6 @@ body{
 .app:not(.active) {
     border: 1px solid  rgb(100, 207, 255) !important;
 }
+app-tray.open > .app.active >.app-content{
+    box-shadow: inset 0 0 100px 10px rgba(100, 207, 255,0.7);
+}
