--- a/css/docs.css
+++ b/css/docs.css
@@ -24,6 +24,21 @@
 .fs-xxl {
   font-size: 30px;
 }
+.pr-0{
+  padding-right: 0;
+}
+.pl-0{
+  padding-left: 0;
+}
+.pt-0{
+  padding-top: 0;
+}
+.pb-0{
+  padding-bottom: 0;
+}
+.p-0{
+  padding: 0;
+}
 html,
 body{
   height:100%;
