--- a/css/docs.css
+++ b/css/docs.css
@@ -60,7 +60,7 @@ body{
     box-shadow: inset 0 0 100px 10px rgba(100, 207, 255,0.7);
 }
 
-.btm.btn-appflow{
+.btn.btn-appflow{
     box-shadow: inset 0 0 100px 10px rgba(100, 207, 255,0.7);
     border: 1px solid  rgb(100, 207, 255) !important;
     color: rgb(100, 207, 255);
