--- a/css/docs.css
+++ b/css/docs.css
@@ -2,6 +2,7 @@
   color: rgb(100, 207, 255);
     font-size: 40px;
     font-family: Raleway;
+    text-align: center;
 }
 .fr {
   font-family: Raleway
