--- a/css/docs.css
+++ b/css/docs.css
@@ -50,9 +50,10 @@ body{
     box-shadow: inset 0 0 100px 6px rgba(0,0,0,0.4);
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
 }
-.app-tray{
+.app-tray-wrapper{
      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2));
     color: rgb(100, 207, 255); 
+  height:100%;
 }
 .app:not(.active) {
     border: 1px solid  rgb(100, 207, 255) !important;
