--- a/css/docs.css
+++ b/css/docs.css
@@ -40,6 +40,66 @@
 .p-0{
   padding: 0;
 }
+.btn-row-1 > .btn {
+  max-width: 100%;
+  margin: 0;
+}
+
+.btn-row-2 > .btn {
+  max-width: 50%;
+  margin: 0;
+}
+
+.btn-row-3 > .btn {
+  max-width: 33.33333%;
+  margin: 0;
+}
+
+.btn-row-4 > .btn {
+  max-width: 25%;
+  margin: 0;
+}
+
+.btn-row-5 > .btn {
+  max-width: 20%;
+  margin: 0;
+}
+
+.btn-row-6 > .btn {
+  max-width: 16.66667%;
+  margin: 0;
+}
+
+.btn-row-7 > .btn {
+  max-width: 14.28571%;
+  margin: 0;
+}
+
+.btn-row-8 > .btn {
+  max-width: 12.5%;
+  margin: 0;
+}
+
+.btn-row-9 > .btn {
+  max-width: 11.11111%;
+  margin: 0;
+}
+
+.btn-row-10 > .btn {
+  max-width: 10%;
+  margin: 0;
+}
+
+.btn-row-11 > .btn {
+  max-width: 9.09091%;
+  margin: 0;
+}
+
+.btn-row-12 > .btn {
+  max-width: 8.33333%;
+  margin: 0;
+}
+
 html,
 body{
   height:100%;
