--- a/css/docs.css
+++ b/css/docs.css
@@ -114,6 +114,9 @@ body{
      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2));
     color: rgb(100, 207, 255); 
 }
+.app-tray {
+  min-height: 400px;
+}
 .app:not(.active) {
     border: 1px solid  rgb(100, 207, 255) !important;
 }
