--- a/css/docs.css
+++ b/css/docs.css
@@ -100,11 +100,10 @@
   margin: 0;
 }
 
-html{
-  height:100%;
+html, body{
+  height:auto;
 }
 body{
- height: auto;
       -webkit-box-shadow: inset 0 0 40px 20px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 100px 6px rgba(0,0,0,0.4);
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(-225deg, #5D9FFF 0%, #B8DCFF 48%, #6BBBFF 100%);
