--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/AppFlow.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/rowheighthelper.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
     
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  <script  type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
