--- a/css/docs.css
+++ b/css/docs.css
@@ -7,8 +7,13 @@
 .fa-inverse-custom {
     color: #313e4d;
 }
-.fa-stack-05{
-  icon-size: 0.5em
+.fa-stack-0-5x{
+  font-size: 0.5em;
+  position: absolute;
+    left: 0;
+    width: 100%;
+    text-align: center;
+  line-height: inherit
 }
 .fr {
   font-family: Raleway
