--- a/css/docs.css
+++ b/css/docs.css
@@ -149,3 +149,8 @@ body{
     border: 1px solid  rgb(100, 207, 255) !important;
     color: rgb(100, 207, 255);
 }
+.btn.btn-appflow-alt {
+    box-shadow: inset 0 0 10px 2px rgba(255, 233, 120,0.7);
+    border: 1px solid rgb(255, 233, 120)!important;
+    color: rgb(255, 233, 120);
+}
