--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -102,9 +102,9 @@
   height: 100%;
 }
 
-.app:not(.active):hover {
+/*.app:not(.active):hover {
   box-shadow: #ddd 0 0 3px 3px;
-}
+}*/
 
 .app-tray,
 .app-tray:before,
