--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -1,10 +1,9 @@
 .tray-wrapper {
     height: auto;
     position: relative;
-    overflow-y: auto;
 }
-.tray-wrapper.auto-resize {
-    overflow-y: none;
+.tray-wrapper:not(.auto-resize) {
+    overflow-y: auto;
 }
 .tray-wrapper > .app-tray.app-open {
     position: absolute;
